[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
description = "High-level bindings to V8, the Javascript engine"
keywords = ["v8", "javascript", "js", "ecmascript", "google"]
license = "Apache-2.0"
name = "v8"
repository = "https://github.com/dflemstr/v8-rs"
version = "0.5.8"

[dependencies]
error-chain = "0.5.0"
lazy_static = "0.2.1"
v8-sys = "0.10.0"

[features]
shared = ["v8-sys/shared"]
