[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
description = "A parser for v8.h files to extract a description of the V8 API heuristically.  Used in build scripts, for example in v8-sys."
homepage = "https://dflemstr.github.io/v8-rs"
keywords = ["v8", "javascript", "api"]
name = "v8-api"
license = "Apache-2.0"
repository = "https://github.com/dflemstr/v8-rs/tree/master/v8-api"
version = "0.7.2"

[dependencies]
env_logger = "0.4.0"
log = "0.3.6"

[dependencies.clang]
features = ["clang_3_5"]
version = "0.15.0"
