[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
build = "build.rs"
description = "Low-level bindings to V8, the Javascript engine"
documentation = "https://dflemstr.github.io/v8-rs/v8_sys/index.html"
homepage = "https://dflemstr.github.io/v8-rs"
include = ["build.rs", "src/**/*", "Cargo.toml"]
keywords = ["v8", "javascript", "js", "ecmascript", "google"]
license = "Apache-2.0"
name = "v8-sys"
repository = "https://github.com/dflemstr/v8-rs/tree/master/v8-sys"
version = "0.14.7"

[build-dependencies]
bindgen = "0.32.1"
cc = "1.0.4"
env_logger = "0.4.3"
pkg-config = "0.3.9"
